--- a/planner/templates/planner/index.html
+++ b/planner/templates/planner/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="de_DE" />
     <title>Gießplan & Pflege-Checker</title>
-    <link rel="icon" type="image/svg+xml" href="{% static 'planner/img/favicon.svg' %}">
+    <link rel="icon" type="image/svg+xml" href="{% static 'planner/img/wassertropfen.svg' %}">
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
