--- a/planner/templates/planner/index.html
+++ b/planner/templates/planner/index.html
@@ -37,6 +37,8 @@
 </head>
 
 <body>
+    <div class="bg-shape bg-1"></div>
+    <div class="bg-shape bg-2"></div>
     <div class="page-shell">
         <div class="container">
             <div class="row justify-content-center">
